// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert - success Action Close Button 1`] = `
<Component
  action={
    <Unknown
      aria-label="Close"
      onClose={[MockFunction]}
    />
  }
  title=""
  variant="success"
>
  <ComponentWithOuia
    component={[Function]}
    componentProps={
      Object {
        "action": <Unknown
          aria-label="Close"
          onClose={[MockFunction]}
        />,
        "children": "Some alert",
        "title": "",
        "variant": "success",
      }
    }
    consumerContext={null}
  >
    <Alert
      action={
        <Unknown
          aria-label="Close"
          onClose={[MockFunction]}
        />
      }
      ouiaContext={
        Object {
          "isOuia": false,
          "ouiaId": null,
        }
      }
      title=""
      variant="success"
    >
      <div
        aria-label="Success Alert"
        className="pf-c-alert pf-m-success"
      >
        <Component
          variant="success"
        >
          <div
            className="pf-c-alert__icon"
          >
            <CheckCircleIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
              title={null}
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                  transform=""
                />
              </svg>
            </CheckCircleIcon>
          </div>
        </Component>
        <h4
          className="pf-c-alert__title"
        >
          <span
            className="pf-u-screen-reader"
          >
            Success alert:
          </span>
        </h4>
        <div
          className="pf-c-alert__description"
        >
          Some alert
        </div>
        <div
          className="pf-c-alert__action"
        >
          <Component
            aria-label="Close"
            onClose={[MockFunction]}
            title=""
            variantLabel="Success alert:"
          >
            <Component
              aria-label="Close"
              onClick={[MockFunction]}
              variant="plain"
            >
              <ComponentWithOuia
                component={[Function]}
                componentProps={
                  Object {
                    "aria-label": "Close",
                    "children": <TimesIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                      title={null}
                    />,
                    "onClick": [MockFunction],
                    "variant": "plain",
                  }
                }
                consumerContext={
                  Object {
                    "isOuia": false,
                    "ouiaId": null,
                  }
                }
              >
                <Button
                  aria-label="Close"
                  onClick={[MockFunction]}
                  ouiaContext={
                    Object {
                      "isOuia": false,
                      "ouiaId": null,
                    }
                  }
                  variant="plain"
                >
                  <button
                    aria-disabled={null}
                    aria-label="Close"
                    className="pf-c-button pf-m-plain"
                    disabled={false}
                    onClick={[MockFunction]}
                    tabIndex={null}
                    type="button"
                  >
                    <TimesIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                      title={null}
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 352 512"
                        width="1em"
                      >
                        <path
                          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                          transform=""
                        />
                      </svg>
                    </TimesIcon>
                  </button>
                </Button>
              </ComponentWithOuia>
            </Component>
          </Component>
        </div>
      </div>
    </Alert>
  </ComponentWithOuia>
</Component>
`;

exports[`Alert - success Action Link 1`] = `
<Component
  action={
    <Unknown>
      test
    </Unknown>
  }
  title=""
  variant="success"
>
  <ComponentWithOuia
    component={[Function]}
    componentProps={
      Object {
        "action": <Unknown>
          test
        </Unknown>,
        "children": "Some alert",
        "title": "",
        "variant": "success",
      }
    }
    consumerContext={null}
  >
    <Alert
      action={
        <Unknown>
          test
        </Unknown>
      }
      ouiaContext={
        Object {
          "isOuia": false,
          "ouiaId": null,
        }
      }
      title=""
      variant="success"
    >
      <div
        aria-label="Success Alert"
        className="pf-c-alert pf-m-success"
      >
        <Component
          variant="success"
        >
          <div
            className="pf-c-alert__icon"
          >
            <CheckCircleIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
              title={null}
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                  transform=""
                />
              </svg>
            </CheckCircleIcon>
          </div>
        </Component>
        <h4
          className="pf-c-alert__title"
        >
          <span
            className="pf-u-screen-reader"
          >
            Success alert:
          </span>
        </h4>
        <div
          className="pf-c-alert__description"
        >
          Some alert
        </div>
        <div
          className="pf-c-alert__action"
        >
          <Component
            title=""
            variantLabel="Success alert:"
          >
            <Component
              className=""
              title=""
              variant="link"
              variantLabel="Success alert:"
            >
              <ComponentWithOuia
                component={[Function]}
                componentProps={
                  Object {
                    "children": "test",
                    "className": "",
                    "title": "",
                    "variant": "link",
                    "variantLabel": "Success alert:",
                  }
                }
                consumerContext={
                  Object {
                    "isOuia": false,
                    "ouiaId": null,
                  }
                }
              >
                <Button
                  className=""
                  ouiaContext={
                    Object {
                      "isOuia": false,
                      "ouiaId": null,
                    }
                  }
                  title=""
                  variant="link"
                  variantLabel="Success alert:"
                >
                  <button
                    aria-disabled={null}
                    aria-label={null}
                    className="pf-c-button pf-m-link"
                    disabled={false}
                    tabIndex={null}
                    title=""
                    type="button"
                    variantLabel="Success alert:"
                  >
                    test
                  </button>
                </Button>
              </ComponentWithOuia>
            </Component>
          </Component>
        </div>
      </div>
    </Alert>
  </ComponentWithOuia>
</Component>
`;

exports[`Alert - success Action and Title 1`] = `
<Component
  action={
    <Unknown>
      test
    </Unknown>
  }
  title="Some title"
  variant="success"
>
  <ComponentWithOuia
    component={[Function]}
    componentProps={
      Object {
        "action": <Unknown>
          test
        </Unknown>,
        "children": "Some alert",
        "title": "Some title",
        "variant": "success",
      }
    }
    consumerContext={null}
  >
    <Alert
      action={
        <Unknown>
          test
        </Unknown>
      }
      ouiaContext={
        Object {
          "isOuia": false,
          "ouiaId": null,
        }
      }
      title="Some title"
      variant="success"
    >
      <div
        aria-label="Success Alert"
        className="pf-c-alert pf-m-success"
      >
        <Component
          variant="success"
        >
          <div
            className="pf-c-alert__icon"
          >
            <CheckCircleIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
              title={null}
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                  transform=""
                />
              </svg>
            </CheckCircleIcon>
          </div>
        </Component>
        <h4
          className="pf-c-alert__title"
        >
          <span
            className="pf-u-screen-reader"
          >
            Success alert:
          </span>
          Some title
        </h4>
        <div
          className="pf-c-alert__description"
        >
          Some alert
        </div>
        <div
          className="pf-c-alert__action"
        >
          <Component
            title="Some title"
            variantLabel="Success alert:"
          >
            <Component
              className=""
              title="Some title"
              variant="link"
              variantLabel="Success alert:"
            >
              <ComponentWithOuia
                component={[Function]}
                componentProps={
                  Object {
                    "children": "test",
                    "className": "",
                    "title": "Some title",
                    "variant": "link",
                    "variantLabel": "Success alert:",
                  }
                }
                consumerContext={
                  Object {
                    "isOuia": false,
                    "ouiaId": null,
                  }
                }
              >
                <Button
                  className=""
                  ouiaContext={
                    Object {
                      "isOuia": false,
                      "ouiaId": null,
                    }
                  }
                  title="Some title"
                  variant="link"
                  variantLabel="Success alert:"
                >
                  <button
                    aria-disabled={null}
                    aria-label={null}
                    className="pf-c-button pf-m-link"
                    disabled={false}
                    tabIndex={null}
                    title="Some title"
                    type="button"
                    variantLabel="Success alert:"
                  >
                    test
                  </button>
                </Button>
              </ComponentWithOuia>
            </Component>
          </Component>
        </div>
      </div>
    </Alert>
  </ComponentWithOuia>
</Component>
`;

exports[`Alert - success Custom aria label 1`] = `
<Component
  action={
    <Unknown>
      test
    </Unknown>
  }
  aria-label="Custom aria label for success"
  title="Some title"
  variant="success"
>
  <ComponentWithOuia
    component={[Function]}
    componentProps={
      Object {
        "action": <Unknown>
          test
        </Unknown>,
        "aria-label": "Custom aria label for success",
        "children": "Some alert",
        "title": "Some title",
        "variant": "success",
      }
    }
    consumerContext={null}
  >
    <Alert
      action={
        <Unknown>
          test
        </Unknown>
      }
      aria-label="Custom aria label for success"
      ouiaContext={
        Object {
          "isOuia": false,
          "ouiaId": null,
        }
      }
      title="Some title"
      variant="success"
    >
      <div
        aria-label="Custom aria label for success"
        className="pf-c-alert pf-m-success"
      >
        <Component
          variant="success"
        >
          <div
            className="pf-c-alert__icon"
          >
            <CheckCircleIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
              title={null}
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                  transform=""
                />
              </svg>
            </CheckCircleIcon>
          </div>
        </Component>
        <h4
          className="pf-c-alert__title"
        >
          <span
            className="pf-u-screen-reader"
          >
            Success alert:
          </span>
          Some title
        </h4>
        <div
          className="pf-c-alert__description"
        >
          Some alert
        </div>
        <div
          className="pf-c-alert__action"
        >
          <Component
            title="Some title"
            variantLabel="Success alert:"
          >
            <Component
              className=""
              title="Some title"
              variant="link"
              variantLabel="Success alert:"
            >
              <ComponentWithOuia
                component={[Function]}
                componentProps={
                  Object {
                    "children": "test",
                    "className": "",
                    "title": "Some title",
                    "variant": "link",
                    "variantLabel": "Success alert:",
                  }
                }
                consumerContext={
                  Object {
                    "isOuia": false,
                    "ouiaId": null,
                  }
                }
              >
                <Button
                  className=""
                  ouiaContext={
                    Object {
                      "isOuia": false,
                      "ouiaId": null,
                    }
                  }
                  title="Some title"
                  variant="link"
                  variantLabel="Success alert:"
                >
                  <button
                    aria-disabled={null}
                    aria-label={null}
                    className="pf-c-button pf-m-link"
                    disabled={false}
                    tabIndex={null}
                    title="Some title"
                    type="button"
                    variantLabel="Success alert:"
                  >
                    test
                  </button>
                </Button>
              </ComponentWithOuia>
            </Component>
          </Component>
        </div>
      </div>
    </Alert>
  </ComponentWithOuia>
</Component>
`;

exports[`Alert - success Description 1`] = `
<Component
  title=""
  variant="success"
>
  <ComponentWithOuia
    component={[Function]}
    componentProps={
      Object {
        "children": "Some alert",
        "title": "",
        "variant": "success",
      }
    }
    consumerContext={null}
  >
    <Alert
      ouiaContext={
        Object {
          "isOuia": false,
          "ouiaId": null,
        }
      }
      title=""
      variant="success"
    >
      <div
        aria-label="Success Alert"
        className="pf-c-alert pf-m-success"
      >
        <Component
          variant="success"
        >
          <div
            className="pf-c-alert__icon"
          >
            <CheckCircleIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
              title={null}
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                  transform=""
                />
              </svg>
            </CheckCircleIcon>
          </div>
        </Component>
        <h4
          className="pf-c-alert__title"
        >
          <span
            className="pf-u-screen-reader"
          >
            Success alert:
          </span>
        </h4>
        <div
          className="pf-c-alert__description"
        >
          Some alert
        </div>
      </div>
    </Alert>
  </ComponentWithOuia>
</Component>
`;

exports[`Alert - success Title 1`] = `
<Component
  title="Some title"
  variant="success"
>
  <ComponentWithOuia
    component={[Function]}
    componentProps={
      Object {
        "children": "Some alert",
        "title": "Some title",
        "variant": "success",
      }
    }
    consumerContext={null}
  >
    <Alert
      ouiaContext={
        Object {
          "isOuia": false,
          "ouiaId": null,
        }
      }
      title="Some title"
      variant="success"
    >
      <div
        aria-label="Success Alert"
        className="pf-c-alert pf-m-success"
      >
        <Component
          variant="success"
        >
          <div
            className="pf-c-alert__icon"
          >
            <CheckCircleIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
              title={null}
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                  transform=""
                />
              </svg>
            </CheckCircleIcon>
          </div>
        </Component>
        <h4
          className="pf-c-alert__title"
        >
          <span
            className="pf-u-screen-reader"
          >
            Success alert:
          </span>
          Some title
        </h4>
        <div
          className="pf-c-alert__description"
        >
          Some alert
        </div>
      </div>
    </Alert>
  </ComponentWithOuia>
</Component>
`;

exports[`Alert - success Toast alerts match snapsnot 1`] = `
<Component
  aria-label="success toast alert"
  isToast={true}
  title="Some title"
  variant="success"
>
  <ComponentWithOuia
    component={[Function]}
    componentProps={
      Object {
        "aria-label": "success toast alert",
        "children": "Some toast alert",
        "isToast": true,
        "title": "Some title",
        "variant": "success",
      }
    }
    consumerContext={null}
  >
    <Alert
      aria-label="success toast alert"
      isToast={true}
      ouiaContext={
        Object {
          "isOuia": false,
          "ouiaId": null,
        }
      }
      title="Some title"
      variant="success"
    >
      <div
        aria-atomic="false"
        aria-label="success toast alert"
        aria-live="polite"
        className="pf-c-alert pf-m-live pf-m-success"
      >
        <Component
          variant="success"
        >
          <div
            className="pf-c-alert__icon"
          >
            <CheckCircleIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
              title={null}
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                  transform=""
                />
              </svg>
            </CheckCircleIcon>
          </div>
        </Component>
        <h4
          className="pf-c-alert__title"
        >
          <span
            className="pf-u-screen-reader"
          >
            Success alert:
          </span>
          Some title
        </h4>
        <div
          className="pf-c-alert__description"
        >
          Some toast alert
        </div>
      </div>
    </Alert>
  </ComponentWithOuia>
</Component>
`;

exports[`Alert - success inline variation 1`] = `
<Component
  isInline={true}
  title="Some title"
  variant="success"
>
  <ComponentWithOuia
    component={[Function]}
    componentProps={
      Object {
        "children": "Some alert",
        "isInline": true,
        "title": "Some title",
        "variant": "success",
      }
    }
    consumerContext={null}
  >
    <Alert
      isInline={true}
      ouiaContext={
        Object {
          "isOuia": false,
          "ouiaId": null,
        }
      }
      title="Some title"
      variant="success"
    >
      <div
        aria-label="Success Alert"
        className="pf-c-alert pf-m-inline pf-m-success"
      >
        <Component
          variant="success"
        >
          <div
            className="pf-c-alert__icon"
          >
            <CheckCircleIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
              title={null}
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                  transform=""
                />
              </svg>
            </CheckCircleIcon>
          </div>
        </Component>
        <h4
          className="pf-c-alert__title"
        >
          <span
            className="pf-u-screen-reader"
          >
            Success alert:
          </span>
          Some title
        </h4>
        <div
          className="pf-c-alert__description"
        >
          Some alert
        </div>
      </div>
    </Alert>
  </ComponentWithOuia>
</Component>
`;

exports[`Alert should match snapshot (auto-generated) 1`] = `
<ContextConsumer>
  <Component />
</ContextConsumer>
`;
